# lreview

./: README.md  config.default.toml  pyproject.toml
lreview/: __init__.py  cli.py  config.py  diff.py  patch.py  review.py  ui.py
