[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lreview"
version = "0.1.0"
description = "Local LLM code review CLI with staged patch apply"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "ollama>=0.3",
]

[project.scripts]
lreview = "lreview.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
